tests/negative/traits/invoke_dyn_mutability.orng
// invoke_dyn_mutability.orng:21:6: error: receiver `&mut self` of method `lmao` incompatible with type `&dyn Lol`
//     x.>lmao()
//     ^
// 
trait Lol {
    virtual fn lmao(&mut self) -> ()
}

impl Lol for Int {
    virtual fn lmao(&mut self) -> () {
        self^ = 30
    }
}

fn main() -> Int {
    let x = 5
    f(&x)
}

fn f(x: &dyn Lol) -> () {
    x.>lmao()
}